# Connect_4_CLI

./: CMakeLists.txt  README.md  main.cpp  makefile
include/: grid.h  idots.h  program.h
